[project]
name = "jjjquery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "abc-radio-wrapper>=0.2.1",
    "httpx>=0.28.0",
    "typing-extensions>=4.12.2",
]

[dependency-groups]
dev = [
    "marimo>=0.9.31",
]
