[project]
name = "jjjquery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "abc-radio-wrapper>=0.2.1",
    "aws-cdk-aws-lambda-python-alpha>=2.172.0a0",
    "aws-cdk-lib>=2.172.0",
    "typing-extensions>=4.12.2",
    "uv-python-lambda>=0.0.4",
]

[dependency-groups]
dev = [
    "marimo>=0.9.31",
]

[tool.uv.workspace]
members = ["lambda-jjjunction"]
